Added Gender to Building table

--- a/students/static/students/building/building.css
+++ b/students/static/students/building/building.css
@@ -45,8 +45,8 @@
     color: #686e78;
 }
 
-.bootstrap-select {
-    padding-bottom: 12px;    
+.table-responsive {
+    padding-top: 12px;    
 }
 
 .apt-room {
