Changed "Open Beds" to "Beds" on building pages. Adding import/export bones to transaction model.

--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -124,7 +124,7 @@
                   <th></th>
                   <th>#</th>
                   <th>Type</th>
-                  <th>Open Beds</th>
+                  <th>Beds</th>
                   <th>Pulls</th>
                   <th>Notes</th>
                 </tr>
