--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -11,9 +11,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/staff/RoomSelect">Room Selection</a></li>
-            <li><a href="/staff/LotteryNumber">Number Input</a></li>
-            <li><a href="/staff/ReviewRoom">Review a Room</a
+            {% url 'room-select' as select_room_url %}
+            {% url 'loto-num' as loto_num_url %}
+            {% url 'review-room' as review_room_url %}
+            <li><a href="{{select_room_url}}">Room Selection</a></li>
+            <li><a href="{{loto_num_url}}">Number Input</a></li>
+            <li><a href="{{review_room_url}}">Review a Room</a
             ></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
