--- a/staff/templates/staff/ReviewRoom.html
+++ b/staff/templates/staff/ReviewRoom.html
@@ -44,7 +44,7 @@
 	<p class="lead">{{ HeaderText }}</p>
 	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
 	{{form.as_p}}
-	<button type="submit" class="save btn btn-default">Save</button>
+	<button type="submit" class="save btn btn-default">Next</button>
 	</form>
       </div>
 
