--- a/staff/templates/staff/RoomSelect.html
+++ b/staff/templates/staff/RoomSelect.html
@@ -49,17 +49,19 @@
 	{% endfor %}	
 	
 	</p>
-	<button type="submit" class="save btn btn-default">Save</button>
-	</form>
-      </div>
+
+	<button type="submit" class="save btn btn-default">Next</button>
 
 <div class="progress">
   <div class="progress-bar progress-bar-info progress-bar-striped" 
-       role="progressbar" aria-valuenow="50" aria-valuemin="0" 
+       role="progressbar" aria-valuenow="0" aria-valuemin="0" 
        aria-valuemax="100" style="width:0%">
     <font color="black">0% Complete</font>
   </div>
 </div>
+	</form>
+      </div>
+
 
     </div><!-- /.container -->
 
