--- a/staff/templates/staff/StudentInfo.html
+++ b/staff/templates/staff/StudentInfo.html
@@ -35,9 +35,7 @@
     {% include "staff/header.html" %}
     <div class="container">
       <div class="starter-template">
-	<button onclick="window.history.back();" 
-		id="myButton" 
-		class="float-left submit-button" >Back</button>
+
           <div class="container col-md-12">
               <form role="form" method="POST" class="post-form form-horizontal" action="{{Action}}">
                         {% csrf_token %}
@@ -57,7 +55,7 @@
                         {% endfor %}
                       <ul class="nav navbar-nav navbar-right">
                           <li>
-	                       <button type="submit" class="save btn btn-default">Save</button>
+	                      
                           </li>
                       </ul>
                         </ul>
@@ -91,6 +89,12 @@
                                 {% endfor %}                    
                                 </div> <!-- End tab-pane -->
                              <!-- End tab-content -->
+
+			           <button onclick="window.history.back();" 
+	      id="myButton" 
+	      class="save btn btn-default" >Back</button>
+
+      <button type="submit" class="save btn btn-default">Next</button>
                             {% endfor %}
                             </div>
                         </div>
@@ -98,11 +102,17 @@
               </div>
           </div>
 
+
+
     </form>
     </div>
 
+
+
     </div><!-- /.container -->
 
+
+      
 	  <div class="progress">
 	    <div class="progress-bar progress-bar-info progress-bar-striped" 
 		 role="progressbar" aria-valuenow="50" aria-valuemin="0" 
