Added a Staff Edit Option page

--- a/staff/templates/staff/edit.html
+++ b/staff/templates/staff/edit.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Staff Edit Option</title>
+    <title>Staff Edit Options</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/staff/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Staff Edit Options</h1>
+        <h1>Staff Admin Edit Options</h1>
 	<p class="lead">Select one of the options below</p>
       </div>
 
