--- a/staff/templates/staff/ReviewRoom.html
+++ b/staff/templates/staff/ReviewRoom.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template -->
     <link href="/static/staff/home/starter-template.css" rel="stylesheet">
 
+    <!-- Progress bar formatting -->
+    <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
@@ -48,13 +51,29 @@
 	</form>
       </div>
 
-      <div class="progress">
-	<div class="progress-bar progress-bar-info progress-bar-striped" 
-	     role="progressbar" aria-valuenow="50" aria-valuemin="0" 
-	     aria-valuemax="100" style="width:0%">
-	  <font color="black">0% Complete</font>
-	</div>
-      </div>
+          <div class="row bs-wizard" style="border-bottom:0;">
+                
+                <div class="col-xs-4 bs-wizard-step active"><!-- active -->
+                  <div class="text-center bs-wizard-stepnum">Step 1</div>
+                  <div class="progress"><div class="progress-bar"></div></div>
+                  <a href="#" class="bs-wizard-dot"></a>
+                  <div class="bs-wizard-info text-center">Building Information</div>
+                </div>
+                
+                <div class="col-xs-4 bs-wizard-step disabled">
+                  <div class="text-center bs-wizard-stepnum">Step 2</div>
+                  <div class="progress"><div class="progress-bar"></div></div>
+                  <a href="#" class="bs-wizard-dot"></a>
+                  <div class="bs-wizard-info text-center">Transaction Information</div>
+                </div>
+                
+                <div class="col-xs-4 bs-wizard-step disabled">
+                  <div class="text-center bs-wizard-stepnum">Step 3</div>
+                  <div class="progress"><div class="progress-bar"></div></div>
+                  <a href="#" class="bs-wizard-dot"></a>
+                  <div class="bs-wizard-info text-center">Confirm</div>
+                </div>
+          </div>
       
       
     </div><!-- /.container -->
