--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -304,20 +304,18 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/students/assets/js/vendor/jquery.min.js"><\/script>')</script>
-        
     <script src="/../static/students/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/students/assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- Script for collapsable side navigation -->
     <script src="/static/students/home/home-sidebar.js"></script>
-    <!-- Script for Zoom JQuery Plugin -->
+    <!-- Zoom JQuery Plugin -->
     <script src="/static/students/assets/js/zoom/jquery.elevateZoom-3.0.8.min.js" type="text/javascript"></script>
     <!-- Script for floor plan inner zoom -->
     <script src="/static/students/building/zoom.js" type="text/javascript"></script> 
-    <!-- Scripts for filtering by floor -->
+    <!-- Bootstrap Select plugin for filtering by floor -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
     <script src="/static/students/building/floorFilter.js"></script>
     <!-- Script for floor plan thumbnail click function -->
