--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -17,11 +17,9 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
 
-    <!-- Custom styles for this template -->
-    <link href="/static/students/home/starter-template.css" rel="stylesheet">
-      
-    <!-- CSS for this page -->
-    <link rel="stylesheet" href="/static/students/building/building.css">
+    <!-- Custom styles for this template - sidebar, etc. -->
+    <link href="/static/students/home/home.css" rel="stylesheet">
+    <link href="/static/students/sidebar/sidebar.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -41,7 +39,7 @@
     
       <div id="main">
           <div class="container">
-              <div class="container col-md-12">
+              <div class="container col-md-12" id="home-jumbotron">
                     <h1>Welcome to the Subfree Lottery</h1>
                     <p class="lead">Select a building from the left navigation to view room availability by dorm</p>
               </div>
@@ -67,14 +65,14 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/students/assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- Script for collapsable side navigation -->
-    <script src="/static/students/home/home-sidebar.js"></script>
+    <script src="/static/students/sidebar/sidebar.js"></script>
       
     <!-- Twitter Timeline
     ================================================== -->
     <script src="/static/students/assets/js/twitter-timeline.js"></script>
       
     <!-- Script for filtering building sidebar -->
-    <script src="/static/students/building/sidebar-filter.js"></script>                   
+    <script src="/static/students/sidebar/sidebar-filter.js"></script>                   
       
   </body>
 </html>
