--- a/students/static/students/sidebar/sidebar.css
+++ b/students/static/students/sidebar/sidebar.css
@@ -1,3 +1,7 @@
+#sidebar-title {
+    margin-bottom: 18px;
+}
+
 body,html,.row-offcanvas {
   height:100%;
 }
@@ -17,10 +21,12 @@ body {
   overflow-y:auto;
   overflow-x:hidden;
 }
+
 #main {
   height:100%;
   overflow:auto;
 }
+
 
 /*
  * off Canvas sidebar
