Created a Edit Admin landing page. Created Edit Room form page. Created Edit Building form page.

--- a/staff/templates/staff/edit.html
+++ b/staff/templates/staff/edit.html
@@ -36,10 +36,75 @@
 
     <div class="container">
 
+    <!--
       <div class="starter-template">
         <h1>Staff Admin Edit Options</h1>
 	<p class="lead">Select one of the options below</p>
       </div>
+        
+    <div class="panel-group">
+    <div class="panel panel-warning">
+        <div class="panel-heading">Edit Room</div>
+        <div class="panel-body">Use this to make changes to the details of a room.</div>
+    </div>
+      <div class="panel panel-warning">
+        <div class="panel-heading">Edit Building</div>
+        <div class="panel-body">Use this to make changes to the details of a building.</div>
+      </div>
+      <div class="panel panel-warning">
+        <div class="panel-heading">Edit Selection</div>
+        <div class="panel-body">Use this to make changes to the demographics in a specific room.</div>
+      </div>
+    </div>
+    -->
+    <div class="starter-template">
+        <h1>Staff Admin Edit Options</h1>
+	   <p class="lead">Select one of the options below</p>
+    </div>
+    <hr class="">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <a href= "/staff/edit/room">
+                        <h3 class="">Edit Room</h3>
+                    </a>
+                </div>
+                <div class="panel-body">Use this to make changes to the details of a room.
+                    <br><br>Ex. Bundy 104 listed as a double instead of a single.</div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <a href = "/staff/edit/building">
+                        <h3 class="">Edit Building</h3>
+                    </a>
+                </div>
+                <div class="panel-body">Use this to make changes to the details of a building.
+                    <br><br>Ex. Saunders listed as having no singles.</div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <a href = "/staff/reviewroom">
+                            <h3 class="">Edit Selection</h3>
+                        </a>
+                    </div>
+                <div class="panel-body">Use this to make changes to the demographics in a specific room.
+                    <br><br>Ex. Marked occupant as Class of 2018 instead of Class of 2019.</div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <br class="">
+            <br class="">
+            <br class="">
+            <br class="">
+        </div>
+    </div>
 
     </div><!-- /.container -->
 
