Pages now will still load even if there is no lottery number.

--- a/staff/templates/staff/ConfirmSelection.html
+++ b/staff/templates/staff/ConfirmSelection.html
@@ -52,7 +52,7 @@
 	
 	</p>
 	<button onclick="window.history.back();" 
-		id="myButton" 
+		id="backButton" 
 		class="save btn btn-default" >Back</button>
 	<button type="submit" class="save btn btn-default">Confirm</button>
 	</form>
@@ -93,6 +93,8 @@
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/staff/RoomSelect/buildingRoomsFilter.js"></script>
+    <script src="/static/staff/RoomSelect/BackButtons.js"></script>
+    
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
