--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -48,11 +48,11 @@
       <div id="main">
           <div class="col-md-12">
               <h1 id="page-title">
-                  {{current_building.name}}
+                  {{current_building.name}} 
                   {% if current_building.closed_to == 'F' %}
-                  <span class="label label-info">Closed to Women</span>
+                  <span class="label label-warning">Closed to Women</span>
                   {% elif current_building.closed_to == 'M' %}
-                  <span class="label label-info">Closed to Men</span>
+                  <span class="label label-warning">Closed to Men</span>
                   {% endif %}
               </h1>
               <div class="row">
@@ -123,7 +123,7 @@
                   <th></th>
                   <th>#</th>
                   <th>Type</th>
-                  <th>Open Beds</th>
+                  <th>Beds</th>
                   {% if show_gender %}
                     <th>Gender</th>
                   {% endif %}
