Added a form.css file for LARGE TEXT on forms!

--- a/staff/templates/staff/RoomSelect.html
+++ b/staff/templates/staff/RoomSelect.html
@@ -23,6 +23,10 @@
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
 
+    <!-- CSS for forms-->
+    <link href="/static/staff/StaffForms/forms.css" rel="stylesheet">
+
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
@@ -57,11 +61,11 @@
             </div>
             </div>
 	        {% endfor %}
+            <button type="submit" class="save btn btn-default">Next</button>
         </div>
 	</div>
 	</p>
 
-	<button type="submit" class="save btn btn-default">Next</button>
 
 	</form>
       </div>
