--- a/staff/templates/staff/StudentInfo.html
+++ b/staff/templates/staff/StudentInfo.html
@@ -18,7 +18,8 @@
     <link href="/static/staff/jquery-toggles-master/css/toggles.css" rel="stylesheet">
     <link href="/static/staff/jquery-toggles-master/css/toggles-full.css" rel="stylesheet">
       
-
+    <!-- CSS for forms-->
+    <link href="/static/staff/StaffForms/forms.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
 
