--- a/staff/templates/staff/ConfirmSelection.html
+++ b/staff/templates/staff/ConfirmSelection.html
@@ -23,6 +23,8 @@
     <!-- Progress bar formatting -->
     <link href="/static/staff/progressbar/progressbar.css" rel="stylesheet">
 
+    <!-- CSS for forms-->
+    <link href="/static/staff/StaffForms/forms.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
