--- a/staff/templates/staff/select/suite.html
+++ b/staff/templates/staff/select/suite.html
@@ -34,7 +34,7 @@
   <body>
     {% include "staff/header.html" %}
       
-      <div class="container col-md-12">
+      <div class="container">
 
           <div class="starter-template">
             <h1>Suite Selection</h1>
@@ -82,12 +82,9 @@
           
           <!-- if no suites available for selection -->
           {% else %}
-          <div class="container centered-block">
-            <h4>Oops! There are currently no available suites.</h4>
+          <h4>Oops! There are currently no available suites.</h4>
               {# fixme: link to general edit page when made #}
-              {% url 'review-room' as edit_transaction_url %}
-              <h5>Do you need to <a href="{{edit_transaction_url}}">edit</a> an existing transaction?</h5>
-          </div>
+              <h5>Do you need to <a href="{% url 'review-room' %}">edit</a> an existing transaction?</h5>
           {% endif %}
 
     </div><!-- /.container -->
